--- a/index.html
+++ b/index.html
@@ -111,15 +111,11 @@
     </main>
 
     <footer>
-      <a href=""><span>Web</span>Studio</a>
-      <ul>
-        <li>
-          <p>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </li>
-      </ul>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
