--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html"><span>Web</span>Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -25,16 +25,14 @@
     </header>
     <main>
       <section>
-        <h1>Effective Solution for Your Business</h1>
-        <!-- heading -->
-        <button>Order Service</button>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
       </section>
       <section>
         <h2 hidden>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
-            <!-- paragraph -->
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -58,7 +56,7 @@
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
